# rcsp-mirea

./: .gitignore  CMakeLists.txt  main.cpp
pract_1/: CMakeLists.txt
pract_1/task_1/: CMakeLists.txt  main.cpp
pract_1/task_2/: CMakeLists.txt  main.cpp
pract_1/task_3/: CMakeLists.txt  File.h  Generator.h  Handler.h  main.cpp
pract_1/task_4/: CMakeLists.txt  Handler.h  main.cpp
pract_3/: CMakeLists.txt  README.md
pract_3/.cache/clangd/index/: main.cpp.7F8DE5BA587A5D72.idx  main.cpp.891D905BBC062252.idx  main.cpp.C6B13D14B030434A.idx  main.cpp.CA09685DAFC6AE90.idx
pract_3/task_1/: CMakeLists.txt  main.cpp
pract_3/task_2/: main.cpp
pract_3/task_3/: CMakeLists.txt  main.cpp
pract_3/task_4/: Generator.h  Handler.h  main.cpp
pract_4/: pom.xml
pract_4_client/: pom.xml
pract_4_client/src/main/java/com/example/client/controller/: RSocketController.java
pract_5/: docker-compose.yml
pract_5/demo/: Dockerfile  pom.xml
pract_5/demo/src/main/resources/: application.properties
pract_6/: package-lock.json  package.json
pract_6/contracts/: SecPaper.sol
pract_6/test/: SecPaper.test.js
pract_7/: README.md  pom.xml
pract_7/src/main/java/com/example/demo/: DemoApplication.java
pract_7/src/main/java/com/example/webfluxapp/test/: TestApplication.java
pract_7/src/main/java/com/example/webfluxapp/test/controller/: UserController.java
pract_7/src/main/resources/: application.properties  application.yml
pract_7/src/test/java/com/example/demo/: DemoApplicationTests.java
pract_7/src/test/java/com/example/webfluxapp/test/: TestApplicationTests.java
(+3 files in other folders)
